k8s/ngnix-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost.com
      http:
        paths:
          - pathType: Prefix
            path: /auth/?(.*)
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /user/?(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 8081
